fix: avoid unbreakable long words to overflow in quoted message preview

--- a/src/styles/MessageInputFlat.scss
+++ b/src/styles/MessageInputFlat.scss
@@ -44,6 +44,7 @@
           text-align: start;
           align-items: flex-end;
           word-break: break-all;
+          word-wrap: break-word;
 
           .str-chat__message-attachment {
             margin: 0;
